deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      app.openshift.io/connects-to: inventory-mariadb
      app.openshift.io/vcs-url: <<unknown>>
      app.quarkus.io/build-timestamp: 2024-07-22 - 13:43:52 +0000
      app.quarkus.io/commit-id: 86e03ceb9fdac60851acdde3e06fe2fc8fb22fc9
    labels:
      app: inventory
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/name: inventory-coolstore
      app.kubernetes.io/part-of: coolstore
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.openshift.io/runtime: quarkus
      component: inventory
    name: inventory-coolstore
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: inventory
        app.kubernetes.io/name: inventory-coolstore
        app.kubernetes.io/part-of: coolstore
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          app.openshift.io/vcs-url: <<unknown>>
          app.quarkus.io/build-timestamp: 2024-07-22 - 13:43:52 +0000
          app.quarkus.io/commit-id: 86e03ceb9fdac60851acdde3e06fe2fc8fb22fc9
        creationTimestamp: null
        labels:
          app: inventory
          app.kubernetes.io/instance: inventory
          app.kubernetes.io/name: inventory-coolstore
          app.kubernetes.io/part-of: coolstore
          app.kubernetes.io/version: 1.0.0-SNAPSHOT
          app.openshift.io/runtime: quarkus
          component: inventory
          maistra.io/expose-route: "true"
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/coolstore-staging/inventory-coolstore:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: inventory-coolstore
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
kind: List
metadata:
  resourceVersion: ""
