route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      app.openshift.io/vcs-url: <<unknown>>
      app.quarkus.io/build-timestamp: 2024-07-22 - 13:43:52 +0000
      app.quarkus.io/commit-id: 86e03ceb9fdac60851acdde3e06fe2fc8fb22fc9
      openshift.io/host.generated: "true"
    labels:
      app: coolstore
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/name: inventory-coolstore
      app.kubernetes.io/part-of: coolstore
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
      app.openshift.io/runtime: quarkus
      component: inventory
    name: inventory-coolstore
  spec:
    path: /
    port:
      targetPort: http
    to:
      kind: Service
      name: inventory-coolstore
      weight: 100
    wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
